2002-11-13  Jody Goldberg <jody@gnome.org>

	* src/expr.c (gnm_expr_eval) : functions only check for NULL not empty.

2002-11-13  Jon K Hellan  <hellan@acm.org>

	* src/GNOME_Gnumeric.xml: Remove FileImport.

	* src/gui-file.h (gui_file_import): Remove.

	* src/gui-file.c (make_format_chooser): Include an "Automatically
	detected" menu item for NULL in file opener/saver list.
	(gui_file_open, gui_file_import): Merge into one function, named
	gui_file_open. Default to automatically detecting format.

	* src/workbook-control-gui.c (cb_file_import): Remove.
	(workbook_menu_file[]): Remove cb_file_import.
	(verbs[]): Remove FileImport.

2002-11-12  Jody Goldberg <jody@gnome.org>

	* src/mstyle.c (mstyle_element_dump) : polish up a bit.

2002-11-11  Jody Goldberg <jody@gnome.org>

	* src/sheet-style.c (sheet_style_get_extent) : optionally take the
	  most common style into account when calculating extents.  The
	  default style for a column does not contribute to its extent.

	* src/parser.y (fold_negative) : new.
	(unary negative) use it here.
	(array_exp) : and here.
	(yylex) : do _not_ handle negatives here.

2002-11-11  Jody Goldberg <jody@gnome.org>

	* src/preview-grid.c : convert to GObject

2002-11-10  Jody Goldberg <jody@gnome.org>

	* src/rendered-value.c (rendered_value_calc_size_ext) : cells with
	  embedded new lines will potentially be narrower than the cell,
	  but still require multiple lines.

2002-11-10  Jody Goldberg <jody@gnome.org>

	* src/parser.y (yylex) : fix the handling of negative numbers in
	  inline arrays.

2002-11-08  Jody Goldberg <jody@gnome.org>

	* src/stf.c (stf_preparse) : quicky fix for 97672.  Pending removal of
	  this limitation.

2002-11-07  Jody Goldberg <jody@gnome.org>

	* src/item-edit.c (item_edit_draw) : fix bounding box.

2002-11-07   Andreas J. Guelzow  <aguelzow@taliesin.ca> for
	Evert Verhellen <evert.verhellen@advalvas.be>:

	* src/pixmaps/function_selector_24.png : improved