@@ -66,7 +66,7 @@ Pending Patches
     13.1) Add characterization (units) to StyleFormat
 14) merge open and import dialogs                               (DONE)
 15) Notice mismatch between suffix and saver			(DONE)
-16) Decide whether to turn on the poor man's UTF-8 regexps.
+16) Decide whether to turn on the poor man's UTF-8 regexps.     (DONE)
 17) Outline mode
     17.1) markers above/left instead of below/right
     17.2) smarter handling for groups at the edge of selection
